# thesis-llm-experiments

src/: README.md  pyproject.toml
src/experiments/: accuracy_experiment.py  clarity_experiment.py  experiment_runner.py  judge_llm.py  results_analysis.py  stakeholder_experiment.py
src/experiments/results/: experiment_summary.json  llm_cross_metric_performance.csv  llm_high_performers.csv  thesis_optimization_analysis.json
src/experiments/results/accuracy/: accuracy_analysis.json  accuracy_results.csv
src/experiments/results/clarity/: clarity_analysis.json  clarity_results.csv
src/experiments/results/stakeholder-specificity/: stakeholder_analysis.json  stakeholder_results.csv
