[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.31",
    "matplotlib>=3.10.3",
    "openai>=1.88.0",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "textstat>=0.7.7",
]
